[package]
name = "qiita-patch-crate"
version = "0.1.0"
authors = ["Kumassy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[patch.crates-io]
rand = { git = 'https://github.com/Kumassy/qiita-patched-rand', branch = 'patched' }
